--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
+    background-image: linear-gradient(pink, purple);
 }
 
 .sectionOne{
